# SDLRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPreset.json  README.md  meson.build  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  cmake-multi-platform.yml  try_build.yml
src/: main.cpp  window.h
src/assets/models/cube/: cube.mtl
src/assets/shaders/: default.fs  default.vs  light.fs  light.vs
src/config/: config_loader.h
src/engine/: audiosrc.h  camera.h  engine.h  input.h  mesh.h  model.h  node.h  shader.h
src/engine/managers/: input.h  resource.h
src/engine/nodes/: camera.h  light.h  model.h
src/engine/scenes/: camera.h  light.h  mesh.h  model.h  node.h  scene.h
src/engine/shaders/: default.fs  default.vs
subprojects/: CMakePresets.json  CMakeUserPreset.json  assimp.wrap  vcpkg.json
